--- a/task-1/1.html
+++ b/task-1/1.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<html>
-    <head>
-
-    </head>
-    <body>
-
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <div class="wrapper">
         
-    </body>
+    </div>
+</body>
 </html>
