--- a/task-1/1.html
+++ b/task-1/1.html
@@ -3,11 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    <title>Task 1</title>
 </head>
 <body>
-    <div class="wrapper">
-        
-    </div>
+    <header>
+        <nav>
+            <ul class="menu">
+                <li class="menu-item"><a class="menu-item-link" href="#">Элемент меню</a></li>
+                <li class="menu-item"><a class="menu-item-link" href="#">Элемент меню с наведением</a></li>
+                <li class="menu-item"><a class="menu-item-link" href="#">Еще один элемент у которого очень длинный текст</a></li>
+                <li class="menu-item"><a class="menu-item-link" href="#">Еще один элемент меню</a></li>
+                <li class="menu-item"><a class="menu-item-link" href="#">Еще один элемент меню</a></li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
